--- a/src/main/resources/templates/categorias.html
+++ b/src/main/resources/templates/categorias.html
@@ -11,17 +11,27 @@
 
 <section>
     <div class="container" style="width: 60%; padding-bottom: 30px;">
+        <nav class="navbar navbar-light bg-light">
+          
+            <a th:href="@{/add-categoria}" class="btn btn-primary" role="button">Adicionar nova Categoria</a>
+        </nav>
         <table class="table">
             <thead>
             <tr>
                 <th scope="col">ID</th>
                 <th scope="col">Nome</th>
+                <th scope="col">Ações</th>
             </tr>
             </thead>
             <tbody>
             <tr th:each="categoria : ${categorias}">
                 <th scope="row" th:text="${categoria.id}"></th>
                 <td th:text="${categoria.nome}"></td>
+                <td> <a th:href="@{/del-categoria/{id}(id=${categoria.id})}" class="btn btn-danger float-right"
+                    role="button">Remover</a>
+                    <a th:href="@{/edit-categoria/{id}(id=${categoria.id})}" class="btn btn-info float-right"
+                    role="button">Editar</a></td>
+
             </tr>
             </tbody>
         </table>
